--- a/planilha.html
+++ b/planilha.html
@@ -12,22 +12,24 @@
     <label>Mensagem: <textarea name="mensagem"></textarea></label><br>
     <button type="submit">Enviar</button>
   </form>
+
   <script>
     const form = document.getElementById('formLead');
-    form.addEventListener('submit', event => {
-      event.preventDefault();
-      const data = {
-        nome: form.nome.value,
-        telefone: form.telefone.value,
-        mensagem: form.mensagem.value
-      };
-      fetch('https://script.google.com/macros/s/AKfycbxZnSZsvfuUQgh2HkhSqCpgfi_Zx774w7_FnwebzTNbbi4inYsISeg7SFXPMSJ9FLM2CQ/exec', {
-        method: 'POST',
-        headers: { 'Content-Type': 'application/json' },
-        body: JSON.stringify(data)
-      }).then(resp => resp.json())
-        .then(json => alert('Resposta: ' + JSON.stringify(json)))
-        .catch(err => alert('Erro: ' + err));
+    form.addEventListener('submit', async (e) => {
+      e.preventDefault();
+      const formData = new FormData(form);
+      const params = new URLSearchParams(formData);
+
+      try {
+        const resp = await fetch("https://script.google.com/macros/s/AKfycbxZnSZsvfuUQgh2HkhSqCpgfi_Zx774w7_FnwebzTNbbi4inYsISeg7SFXPMSJ9FLM2CQ/exec", {
+          method: "POST",
+          body: params
+        });
+        const json = await resp.json();
+        alert("Resposta: " + JSON.stringify(json));
+      } catch (err) {
+        alert("Erro: " + err);
+      }
     });
   </script>
 </body>
