--- a/planilha.html
+++ b/planilha.html
@@ -2,30 +2,15 @@
 <html lang="pt-BR">
 <head>
   <meta charset="UTF-8">
-  <title>Formulário de Leads</title>
+  <title>Teste Leads</title>
 </head>
-<body style="font-family: Arial, sans-serif; background:#f4f4f4; padding:20px;">
-  <h2>Cadastro de Lead</h2>
-  
+<body style="font-family: Arial, sans-serif; padding:20px;">
+  <h2>Teste Envio de Lead</h2>
+
   <form id="formLead">
-    <label>Origem: <input type="text" name="origem" /></label><br><br>
-    <label>Perfil: <input type="text" name="perfil" /></label><br><br>
-    <label>Nome: <input type="text" name="nome" required /></label><br><br>
-    <label>Telefone: <input type="text" name="telefone" required /></label><br><br>
-    <label>Email: <input type="email" name="email" /></label><br><br>
-    <label>Cidade: <input type="text" name="cidade" /></label><br><br>
-    <label>Nicho: <input type="text" name="nicho" /></label><br><br>
-    <label>Status: 
-      <select name="status">
-        <option value="novo">Novo</option>
-        <option value="em andamento">Em andamento</option>
-        <option value="fechado">Fechado</option>
-      </select>
-    </label><br><br>
-    <label>Mensagem: <textarea name="mensagem"></textarea></label><br><br>
-    <label>URL: <input type="url" name="url" /></label><br><br>
-    
-    <button type="submit">Enviar Lead</button>
+    <label>Nome: <input type="text" name="nome" required></label><br><br>
+    <label>Telefone: <input type="text" name="telefone" required></label><br><br>
+    <button type="submit">Enviar</button>
   </form>
 
   <script>
@@ -42,9 +27,8 @@
         });
         const json = await resp.json();
         alert("Resposta: " + json.msg);
-        form.reset();
       } catch (err) {
-        alert("Erro ao enviar lead: " + err);
+        alert("Erro: " + err);
       }
     });
   </script>
